fix: header page overflow scroll

--- a/src/styles/_app-header.scss
+++ b/src/styles/_app-header.scss
@@ -9,6 +9,7 @@
   // ==========
   width: 100%;
   height: auto;
+  overflow: hidden;
 
   @media (min-width: $break-small) {
     width: 100vw;
